--- a/copy-zenn-site/stylesheet.css
+++ b/copy-zenn-site/stylesheet.css
@@ -133,6 +133,424 @@ header {
     /*縦の中央寄せ*/
     font-size: 30px;
 }
+
+.view-columns_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.view-content {
+    width: calc(100% - 330px);
+}
+
+.view-main {
+    background: #FFFFFF;
+    padding: 40px;
+    border-radius: 12px;
+}
+
+.view-topic {
+    display: flex;
+}
+
+.view-topic_link {
+    display: flex;
+    border: 1px solid #5c93bb2b;
+    margin-right: 0.6rem;
+    margin-bottom: 0.6rem;
+    border-radius: 16px;
+    padding: 0.2rem;
+}
+
+.view-topic_title {
+    padding-right: 0.5rem;
+    font-size: 12.5px;
+    color: black;
+    display: flex;
+    align-items: center;
+}
+
+.view-topic_image {
+    margin-right: 0.4rem;
+}
+
+.view-topic_image_icon01 {
+    height: 26px;
+    display: block;
+}
+
+.view-topic_image_icon02 {
+    height: 26px;
+    display: block;
+}
+
+.body-contents_area {}
+
+.body-contents {}
+
+.body-contents_title {
+    font-size: 1.7rem;
+    margin-top: 2.3rem;
+    margin-bottom: 1.1rem;
+    border-bottom: 1px solid #5c93bb2b;
+    padding-bottom: 0.2rem;
+}
+
+.body-contents_subTitle {
+    font-size: 1.5rem;
+    margin-top: 2.3rem;
+    margin-bottom: 1.1rem;
+    border-bottom: 1px solid #5c93bb2b;
+    padding-bottom: 0.2rem;
+}
+
+.body-contents_image {
+    width: 100%
+}
+
+.short-cut_summary {
+    cursor: pointer;
+    padding: 0.7em 0.7em 0.7em 0.9em;
+    border: 1px solid #5c93bb30;
+    font-size: 0.9em;
+    border-radius: 9px;
+    box-shadow: 0 2px 4px -2px #00000026;
+    background: #fff;
+}
+
+.body-contents_anchor {
+    color: #0f83fd;
+    font-weight: 700;
+}
+
+.body-contents_hr {
+    border-top: 2px solid #5c93bb2b;
+    margin: 2.5rem 0;
+}
+
+.github-edit-suggestion_link {
+    display: flex;
+    align-items: center;
+    border: 1px solid #5c93bb2b;
+    width: 200px;
+    border-radius: 5px;
+    padding: 3px 0;
+    box-shadow: 0 2px 4px -2px #21253840;
+    color: black;
+    margin-top: 30px;
+}
+
+.github-edit-suggestion_image {
+    padding-top: 6px;
+    margin-right: 5px;
+    margin-left: 10px;
+}
+
+/* いいねボタンやツイートボタン */
+.view-actions {
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin-top: 2.5rem;
+}
+
+.like-button__area {
+    display: flex;
+    align-items: center;
+}
+
+.like-button {
+    width: 50px;
+    height: 50px;
+    background: #FFEAF4;
+    color: #F76685;
+    border-radius: 30px;
+    border: #FFEAF4;
+}
+
+.like-button__svg-like {
+    height: 35px;
+    width: 30px;
+    padding-top: 5px;
+}
+
+.like-button__like-count {
+    font-size: 11px;
+    margin-left: 5px;
+}
+
+.right {
+    position: absolute;
+    right: 0;
+    display: flex;
+    align-items: center;
+}
+
+.view-menu {
+    background: #fff;
+    border: none;
+}
+
+.share-tweet {
+    display: flex;
+    align-items: center;
+    border: 1px solid #5c93bb54;
+    height: 43px;
+    border-radius: 30px;
+    color: #93a5b1;
+}
+
+.share-tweet__icon {
+    height: 23px;
+    width: 23px;
+    display: block;
+    margin-left: 15px;
+    margin-right: 5px;
+}
+
+.share-tweet__content {
+    margin-right: 15px;
+}
+
+/* 著者プロフィールエリア */
+.view-author-info {
+    display: flex;
+    align-items: center;
+    padding-top: 1rem;
+    border-top: 1px solid #5c93bb2b;
+    margin-top: 1.3rem;
+}
+
+.profile-icon {
+
+}
+
+.profile-icon__image {
+    height: 80px;
+    border-radius: 45px;
+}
+
+.profile-content__area {
+    margin-left: 20px;
+}
+
+.profile-content__title {
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+.profile-content__detail {
+    color: #6e7b85;
+    margin-top: -2px;
+    font-size: 14px;
+}
+
+.profile-content__action-area {
+    display: flex;
+    align-items: center;
+}
+
+.follow-button {
+    border: 1px solid #6e7b85;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    padding: 3px 13px;
+}
+
+.github-icon__area {
+    margin-left: 20px;
+}
+
+.github-icon__svg-image {
+    height: 22px;
+    display: block;
+    color: #6E7B85;
+}
+
+.twitter-icon__area {
+    margin-left: 20px;
+}
+
+.twitter-icon__svg-image {
+    height: 22px;
+    display: block;
+    color: #6E7B85;
+}
+
+/* Discussionエリア */
+.article-comments__comments-container {
+    background-color: #fff;
+    border-radius: 12px;
+}
+
+.article-comments__image-container {
+    padding: 2.1rem 0;
+    margin-top: 40px;
+}
+
+.article-comments__header-title {
+    text-align: center;
+    font-size: 1.7rem;
+    font-weight: 700;
+    margin-top: 0;
+}
+
+.article-comments__image {
+    /* 画像の中央寄せ */
+    display: block;
+    margin: auto; 
+    width: 48%;
+}
+
+.article-comments__form-container {
+    border-top: 1px solid #5c93bb2b;
+}
+
+.thread-editor__container {
+
+}
+
+.thread-editor__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.thread-editor__header-left {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.thread-editor__icon-container {
+
+}
+
+.thread-editor__icon-image {
+    height: 40px;
+    border-radius: 30px;
+}
+
+.thread-editor__markdown {
+    color: #3ea8ff;
+    background: #e6f2ff;
+    padding: 0.35rem 0.7rem;
+    font-size: 0.84rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 20px;
+    margin-left: 10px;
+}
+
+.thread-editor__preview {
+    color: #93a5b1;
+    background: #fff;
+    padding: 0.35rem 0.7rem;
+    font-size: 0.84rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 20px;
+}
+
+.thread-editor__guide-link-container {
+    margin-right: 20px;
+}
+
+.thread-editor__markdown-guide {
+    color: #93a5b1;
+    font-size: 12.5px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.thread-editor__markdown-guide-icon {
+    height: 14px;
+    color: #93a5b1;
+    transform: rotate(-45deg);
+    vertical-align: -3px;
+}
+
+.thread-editor__main {
+    padding: 10px 20px;
+}
+
+.thread-editor__textarea {
+    width: 100%;
+    border: none;
+    height: 128px;
+    resize: none; 
+    outline: 0;
+}
+
+.thread-editor__footer {
+    /* 作業中 */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-top: 1px solid #5c93bb2b;
+}
+
+.thread-editor__action-area {
+    display: flex;
+    align-items: center;
+}
+
+.thread-editor__image-upload-button {
+    background: #fff;
+    color: #93a5b1;
+    border: none;
+}
+
+.thread-editor__insert-button {
+    background: #fff;
+    color: #93a5b1;
+    border: none;
+}
+
+.thread-editor__insert-span {
+    vertical-align: 2px;
+}
+
+.thread-editor__button-area {
+
+}
+
+.thread-editor__post-button {
+    width: 92px;
+    height: 36px;
+    font-weight: 700;
+    font-size: 14.5px;
+    background: #3ea8ff;
+    color: #fff;
+    letter-spacing: .025em;
+    border-radius: 6px;
+    border: none;
+    opacity: 0.7;
+}
+
+.article-comments__guide-line-message-area {
+    display: flex;
+    align-items: center;
+}
+
+.article-comments__guide-line-message-icon {
+    height: 18px;
+    color: #6e7b85;
+}
+
+.article-comments__guide-line-message-text {
+    color: #6e7b85;
+    font-size: 13px;
+}
+
+.community-guideline__anchor {
+    color: #6e7b85;
+    text-decoration: underline;
+}
 }
 
 
