[Add] サイドバーエリア 著者プロフィール 追加

--- a/copy-zenn-site/stylesheet.css
+++ b/copy-zenn-site/stylesheet.css
@@ -619,3 +619,35 @@ header {
     font-size: 13px;
 }
 
+/* 著者プロフィールエリア */
+.view-author-info__contributor-area {
+    background: #fff;
+    border-radius: 12px;
+    padding: 20px;
+}
+
+.view-author-info__container {
+    display: flex;
+    align-items: center;
+    
+}
+
+.profile-icon__image-02 {
+    height: 60px;
+    border-radius: 45px;
+}
+
+.profile-content__title-02 {
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-top: -3px;
+}
+
+.profile-content__detail-02 {
+    color: #6e7b85;
+    margin-top: 7px;
+    margin-bottom: 0;
+    font-size: 14px;
+}
+
