--- a/copy-zenn-site/stylesheet.css
+++ b/copy-zenn-site/stylesheet.css
@@ -635,3 +635,94 @@ header {
     font-size: 14px;
 }
 
+/* Read nextエリア */
+.related-contents__container {
+    padding: 0 40px;
+    max-width: 960px;
+    margin: 0 auto; /* 画面幅に合わせてよしなに位置が変わる */
+}
+
+.related-contents__title {
+    font-size: 1.7rem;
+    font-weight: 700;
+    font-family: "Inter","BlinkMacSystemFont",Arial,sans-serif;
+    margin: 50px 0 40px 0;
+}
+
+/* ここからli一つ分 */
+.article-list__list-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.article-list__item-container {
+    display: flex;
+    justify-content: space-between;
+    width: 47%;
+    padding: 15px 0;
+}
+
+.article-list__icon-anchor {
+    height: 92px;
+    width: 92px;
+    background: #fff;
+    display: flex; /* flexboxを有効化 */
+    align-items: center; /* 縦方向の中央揃え */
+    justify-content: center; /* 横方向の中央揃え */
+    border-radius: 15px;
+}
+
+.article-list__icon-image {
+    height: 46px;
+    /* transform: rotate(45deg); */
+}
+
+.article-list__content {
+    width: 300px; 
+}
+
+.article-list__anchor {
+    color: #4b4f52;
+}
+
+.article-title {
+    font-size: 1.05rem;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.article-list__user-area {
+    display: flex;
+    align-items: center;
+}
+
+.article-list__avatar {
+    height: 26px;
+    margin-right: 8px;
+}
+
+.article-list__avatar-image {
+    height: 26px;
+    border-radius: 15px;
+}
+
+.article-list__user-name {
+    font-size: 12.5px;
+    color: #000000d1;
+}
+
+.article-list__created {
+    font-size: 11.5px;
+    color: #6e7b85;
+}
+
+.article-list__like-count {
+    font-size: 11.5px;
+    color: #6e7b85;
+}
+
+.article-list__like-svg {
+    vertical-align: -2px;
+}
